# hydeclaw

./: .deploy.env.example  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  release.sh  setup.sh  uninstall.sh  update.sh
crates/hydeclaw-core/: Cargo.toml
crates/hydeclaw-core/scaffold/base/: HEARTBEAT.md  SOUL.md
crates/hydeclaw-core/scaffold/regular/: SOUL.md
crates/hydeclaw-core/src/: chunker.rs  compression_worker.rs  graph_worker.rs  lib.rs  main.rs  memory.rs  memory_graph.rs  metrics.rs  oauth.rs  secrets.rs  shutdown.rs  uploads.rs
crates/hydeclaw-core/src/agent/: agent_config.rs  agent_state.rs  approval_manager.rs  channel_actions.rs  channel_kind.rs  cli_backend.rs  context_builder.rs  engine.rs  engine_agent_tool.rs  engine_commands.rs  engine_context.rs  engine_dispatch.rs  engine_event_sender.rs  engine_execution.rs  engine_handlers.rs  engine_handoff.rs  engine_memory.rs  engine_parallel.rs  engine_provider.rs  engine_sandbox.rs  engine_sessions.rs  engine_sse.rs  engine_subagent.rs  engine_tool_defs.rs  engine_tools.rs  error_classify.rs  handle.rs  history.rs  hooks.rs  json_repair.rs  knowledge_extractor.rs  memory_service.rs  mention_parser.rs  mod.rs  model_discovery.rs  openapi.rs  parts_builder.rs  path_guard.rs  pii.rs  providers.rs  (+17 more)
crates/hydeclaw-core/src/agent/engine/: approval_flow.rs  context_builder.rs  loop_detector_integration.rs  mod.rs  run.rs  stream.rs  tool_executor.rs  yaml_tool_runner.rs
crates/hydeclaw-core/src/agent/pipeline/: agent_tool.rs  approval.rs  bootstrap.rs  canvas.rs  channel_actions.rs  commands.rs  context.rs  cron.rs  dispatch.rs  entry.rs  execute.rs  execution.rs  finalize.rs  handlers.rs  llm_call.rs  memory.rs  mod.rs  openai_compat.rs  parallel.rs  sandbox.rs  sessions.rs  sink.rs  subagent.rs  subagent_runner.rs  tool_defs.rs
crates/hydeclaw-core/src/agent/providers/: build_provider_tests.rs  cancellable_stream.rs  error.rs  routing_tests.rs  timeouts.rs
crates/hydeclaw-core/src/channels/: access.rs
crates/hydeclaw-core/src/config/: limits.rs.tmp  mod.rs  validation.rs
crates/hydeclaw-core/src/containers/: mod.rs  sandbox.rs
crates/hydeclaw-core/src/db/: access.rs  approvals.rs  audit.rs  audit_queue.rs  github.rs  memory_queries.rs  mod.rs  notifications.rs  outbound.rs  pending.rs  providers.rs  session_documents.rs  session_wal.rs  sessions.rs  skill_metrics.rs  skill_versions.rs  tool_audit.rs  tool_quality.rs  usage.rs
crates/hydeclaw-core/src/dto_export/: mod.rs
crates/hydeclaw-core/src/gateway/: csp_core.rs  error.rs  middleware.rs  mod.rs  rate_limiter.rs  state.rs  stream_jobs.rs  stream_registry.rs
crates/hydeclaw-core/src/gateway/clusters/: agent_core.rs  auth_services.rs  channel_bus.rs  config_services.rs  infra_services.rs  status_monitor.rs
crates/hydeclaw-core/src/gateway/handlers/: access.rs  agents.rs  auth.rs  backup.rs  backup_dto_structs.rs  channel_ws.rs  channels.rs  channels_dto_structs.rs  chat.rs  config.rs  cron.rs  cron_dto_structs.rs  email_triggers.rs  github_events.rs  github_repos.rs  media.rs  memory.rs  memory_dto_structs.rs  mod.rs  monitoring.rs  network.rs  notifications.rs  oauth.rs  providers.rs  secrets.rs  services.rs  sessions.rs  skills.rs  tasks.rs  tools.rs  (+5 more)
crates/hydeclaw-core/src/mcp/: mod.rs
crates/hydeclaw-core/src/memory/: admin.rs  embedding.rs  mod.rs  pg_vector_store.rs  store.rs  vector_store.rs  watcher.rs
crates/hydeclaw-core/src/process_manager/: mod.rs
crates/hydeclaw-core/src/scheduler/: mod.rs
crates/hydeclaw-core/src/skills/: evolution.rs  mod.rs
crates/hydeclaw-core/src/tasks/: mod.rs
crates/hydeclaw-core/src/tools/: content_security.rs  embedding.rs  mcp_workspace.rs  mod.rs  semantic_cache.rs  service_registry.rs  ssrf.rs  yaml_tools.rs
crates/hydeclaw-core/tests/: integration_aborted_usage.rs  integration_approval_race.rs  integration_backup_size_cap.rs  integration_batch_insert_chunking.rs  integration_cardinality_guard.rs  integration_csp_report.rs  integration_dashboard_metrics.rs  integration_data_layer_approval.rs  integration_data_layer_indexes.rs  integration_gateway_no_leak.rs  integration_mock_provider.rs  integration_otel_export.rs  integration_partial_chain.rs  integration_path_canonicalize.rs  integration_rate_limiter_sweeper.rs  integration_session_events_cleanup.rs  integration_session_run_status.rs  integration_shutdown_reproducer.rs  integration_sse_coalescing.rs  integration_sse_lifecycle.rs  integration_ssrf_guard.rs  integration_streaming_parent_link.rs  integration_stuck_sessions_window_fn.rs  integration_trace_context.rs  integration_upload_hmac.rs  integration_webhook_ssrf.rs  migration_026.rs
crates/hydeclaw-core/tests/support/: harness.rs  metrics_probe.rs  migrations.rs  mock_provider.rs  mod.rs  sse_recorder.rs  toolgate_fixture.rs
crates/hydeclaw-memory-worker/: Cargo.toml
crates/hydeclaw-memory-worker/src/: config.rs  main.rs  tasks.rs
crates/hydeclaw-memory-worker/src/handlers/: mod.rs  reindex.rs
crates/hydeclaw-memory-worker/tests/: integration_memory_worker_notify.rs  parity_split_text.rs
(+677 files in other folders)
